--- a/.prettierrc
+++ b/.prettierrc
@@ -44,5 +44,6 @@
     "^[./]"
   ],
   "importOrderTypeScriptVersion": "5.0.0",
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
   "plugins": ["@ianvs/prettier-plugin-sort-imports"]
 }
