--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --watch src src/server.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node build/server.js",
-    "lint": "pnpm dlx eslint .",
+    "start": "node build/src/server.js",
+    "lint": "eslint .",
+    "test": "jest",
     "migration:create": "mikro-orm migration:create",
     "migration:up": "mikro-orm migration:up",
     "migration:down": "mikro-orm migration:down",
@@ -47,14 +48,19 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/parser": "^7.27.2",
     "@eslint/js": "^9.26.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@mikro-orm/cli": "^6.4.14",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.16",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "jest": "^29.7.0",
     "prettier": "3.5.3",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
