--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "protheus-api",
   "version": "1.0.0",
-  "main": "build/server.js",
+  "main": "dist/server.js",
   "engines": {
-    "node": ">=22.14.0"
+    "node": "22.14.0"
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --watch src src/server.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node build/src/server.js",
+    "start": "node dist/src/server.js",
     "lint": "eslint .",
     "test": "jest",
     "migration:create": "mikro-orm migration:create",
@@ -70,7 +70,7 @@
     "useTsNode": true,
     "configPaths": [
       "./mikro-orm.config.ts",
-      "./build/mikro-orm.config.js"
+      "./dist/mikro-orm.config.js"
     ]
   },
   "pnpm": {
